--- a/VagrantTray/Properties/Resources.resx
+++ b/VagrantTray/Properties/Resources.resx
@@ -157,6 +157,9 @@
   <data name="Vagrant" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Vagrant.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="VagrantIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Vagrant.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="VagrantWorking" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\VagrantWorking.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
