--- a/VagrantTray/Properties/Resources.resx
+++ b/VagrantTray/Properties/Resources.resx
@@ -154,6 +154,10 @@
   <data name="Up" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Up.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="UpdatesURL" xml:space="preserve">
+    <value>http://www.mikewaltonweb.com/vagranttray/vagranttrayappcast.xml</value>
+    <comment>URL to target with AutoUpdater to check for updates.</comment>
+  </data>
   <data name="Vagrant" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Vagrant.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
